# modo-reps

./: BUILD_NOTES.md  Dockerfile  README.md  build-windows.sh  libcapture_filter.rlib
.github/workflows/: build.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-capture-infrastructure-proof-of-concept/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04A-PLAN.md  01-04A-SUMMARY.md  01-04B-PLAN.md  01-04B-SUMMARY.md  01-05-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: capture-status.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: admin.rs  filter.rs  handle.rs  handle.rs.bak2  loop.rs  loop_.rs  loop_.rs.bak  mod.rs
src-tauri/src/common/: error.rs
src-tauri/src/ui/: commands.rs
